# finance-bot

./: .env.example  .gitignore  README.md  pyproject.toml
src/: app.py  main.py
src/bot/: app.py  setup.py
src/bot/commands/v1/: __init__.py  send_chart.py  send_pie_chart.py  show_menu.py  start_help.py
src/config/libs/: envroinments.py  groq_config.py  openapi_config.py
src/config/models/: classes.py
src/config/schemas/: classes.py
src/database/models/: config_database.py  db_config.py  expenses.py  incomes.py  users.py
src/services/: charts.py
src/services/reports/: charts.py
